--- a/index.html
+++ b/index.html
@@ -157,40 +157,41 @@
                 <p class="mb-5">
                     At Aeon Shipping, we specialize in providing comprehensive logistics solutions tailored to your unique requirements. With a global network and a commitment to excellence, we ensure your shipments are handled with the utmost care and efficiency. Trust us to manage every aspect of your logistics, so you can focus on what matters most—growing your business.
                 </p>
-                <div class="d-flex align-items-center">
-                    <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
-                    <div class="ps-4">
-                        <h6>Have any questions?</h6>
-                        <h3 class="text-primary m-0">+012 345 6789</h3>
+                    <div class="d-flex align-items-center">
+                        <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
+                        <div class="ps-4">
+                            <h6>Call for any query!</h6>
+                            <h3 class="text-primary m-0">+012 345 6789</h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="row g-4 align-items-center">
-                    <div class="col-sm-6">
-                        <div class="bg-primary p-4 mb-4 wow fadeIn" data-wow-delay="0.3s">
-                            <i class="fa fa-smile fa-2x text-white mb-3"></i>
-                            <h2 class="text-white mb-2" data-toggle="counter-up">1,500+</h2>
-                            <p class="text-white mb-0">Satisfied Clients</p>
+                <div class="col-lg-6">
+                    <div class="row g-4 align-items-center">
+                        <div class="col-sm-6">
+                            <div class="bg-primary p-4 mb-4 wow fadeIn" data-wow-delay="0.3s">
+                                <i class="fa fa-users fa-2x text-white mb-3"></i>
+                                <h2 class="text-white mb-2" data-toggle="counter-up">1234</h2>
+                                <p class="text-white mb-0">Happy Clients</p>
+                            </div>
+                            <div class="bg-secondary p-4 wow fadeIn" data-wow-delay="0.5s">
+                                <i class="fa fa-ship fa-2x text-white mb-3"></i>
+                                <h2 class="text-white mb-2" data-toggle="counter-up">1234</h2>
+                                <p class="text-white mb-0">Complete Shipments</p>
+                            </div>
                         </div>
-                        <div class="bg-secondary p-4 wow fadeIn" data-wow-delay="0.5s">
-                            <i class="fa fa-box fa-2x text-white mb-3"></i>
-                            <h2 class="text-white mb-2" data-toggle="counter-up">10,000+</h2>
-                            <p class="text-white mb-0">Shipments Delivered</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="bg-success p-4 wow fadeIn" data-wow-delay="0.7s">
-                            <i class="fa fa-thumbs-up fa-2x text-white mb-3"></i>
-                            <h2 class="text-white mb-2" data-toggle="counter-up">4.9/5.0</h2>
-                            <p class="text-white mb-0">Average Rating</p>
+                        <div class="col-sm-6">
+                            <div class="bg-success p-4 wow fadeIn" data-wow-delay="0.7s">
+                                <i class="fa fa-star fa-2x text-white mb-3"></i>
+                                <h2 class="text-white mb-2" data-toggle="counter-up">1234</h2>
+                                <p class="text-white mb-0">Customer Reviews</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 
     <!-- Fact End -->
 
