--- a/index.html
+++ b/index.html
@@ -456,10 +456,10 @@
             <h1 class="mb-0">What Our Clients Say!</h1>
         </div>
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-            <div class="testimonial-item p-4 my-5 bg-light rounded shadow-sm">
-                <i class="fa fa-quote-right fa-3x text-primary position-absolute top-0 end-0 mt-n3 me-4"></i>
+            <div class="testimonial-item p-4 my-5">
+                <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
                 <div class="d-flex align-items-end mb-4">
-                    <img class="img-fluid flex-shrink-0 rounded-circle border" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
+                    <img class="img-fluid flex-shrink-0" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
                     <div class="ms-4">
                         <h5 class="mb-1">Jane Doe</h5>
                         <p class="m-0">Marketing Manager</p>
@@ -467,10 +467,10 @@
                 </div>
                 <p class="mb-0">The service was outstanding! The team handled everything with professionalism and efficiency. Highly recommend!</p>
             </div>
-            <div class="testimonial-item p-4 my-5 bg-light rounded shadow-sm">
-                <i class="fa fa-quote-right fa-3x text-primary position-absolute top-0 end-0 mt-n3 me-4"></i>
+            <div class="testimonial-item p-4 my-5">
+                <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
                 <div class="d-flex align-items-end mb-4">
-                    <img class="img-fluid flex-shrink-0 rounded-circle border" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
+                    <img class="img-fluid flex-shrink-0" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                     <div class="ms-4">
                         <h5 class="mb-1">John Smith</h5>
                         <p class="m-0">CEO, TechCorp</p>
@@ -478,10 +478,10 @@
                 </div>
                 <p class="mb-0">I’ve never experienced such seamless service. The entire process was quick and hassle-free, exactly what I was looking for!</p>
             </div>
-            <div class="testimonial-item p-4 my-5 bg-light rounded shadow-sm">
-                <i class="fa fa-quote-right fa-3x text-primary position-absolute top-0 end-0 mt-n3 me-4"></i>
+            <div class="testimonial-item p-4 my-5">
+                <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
                 <div class="d-flex align-items-end mb-4">
-                    <img class="img-fluid flex-shrink-0 rounded-circle border" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
+                    <img class="img-fluid flex-shrink-0" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
                     <div class="ms-4">
                         <h5 class="mb-1">Emily Johnson</h5>
                         <p class="m-0">Freelancer</p>
@@ -489,10 +489,10 @@
                 </div>
                 <p class="mb-0">Exceptional attention to detail and customer service! I felt valued and the results were beyond expectations.</p>
             </div>
-            <div class="testimonial-item p-4 my-5 bg-light rounded shadow-sm">
-                <i class="fa fa-quote-right fa-3x text-primary position-absolute top-0 end-0 mt-n3 me-4"></i>
+            <div class="testimonial-item p-4 my-5">
+                <i class="fa fa-quote-right fa-3x text-light position-absolute top-0 end-0 mt-n3 me-4"></i>
                 <div class="d-flex align-items-end mb-4">
-                    <img class="img-fluid flex-shrink-0 rounded-circle border" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
+                    <img class="img-fluid flex-shrink-0" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
                     <div class="ms-4">
                         <h5 class="mb-1">Michael Lee</h5>
                         <p class="m-0">Business Owner</p>
@@ -503,6 +503,8 @@
         </div>
     </div>
 </div>
+<!-- Testimonial End -->
+
 <!-- Testimonial End -->
 
 
