--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 <div class="d-flex align-items-end mb-4">
                     <img class="img-fluid flex-shrink-0" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
                     <div class="ms-4">
-                        <h5 class="mb-1">Emily Johnson</h5>
+                        <h5 class="mb-1">Michael Lee</h5>
                         <p class="m-0">Freelancer</p>
                     </div>
                 </div>
@@ -494,8 +494,8 @@
                 <div class="d-flex align-items-end mb-4">
                     <img class="img-fluid flex-shrink-0" src="img/testimonial-4.jpg" style="width: 80px; height: 80px;">
                     <div class="ms-4">
-                        <h5 class="mb-1">Michael Lee</h5>
-                        <p class="m-0">Business Owner</p>
+                        <h5 class="mb-1">Emily Johnson</h5>
+                        <p class="m-0">Freelancer</p>
                     </div>
                 </div>
                 <p class="mb-0">Great experience from start to finish. The team went above and beyond to ensure everything was perfect!</p>
